# meguro-othello

./: .gitignore  Cargo.toml  Dockerfile
backend/: Cargo.toml
backend/src/: LICENSE  main.rs
frontend/: Cargo.toml
frontend/src/: connection.rs  main.rs  othello.rs
shared/: Cargo.toml
shared/src/: lib.rs
