[workspace]
members = [
    "frontend",
    "backend",
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
