[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
zoon.workspace = true
shared = { path = "../shared", features = ["frontend"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
uuid = { version = "1.6.1", features = ["v4"] }
